[GTK] Layout Test http/tests/media/hls/hls-progress.html is failing https://bugs.webkit.org/show_bug.cgi?id=141469

Patch by Charlie Turner <cturner@igalia.com> on 2017-07-20
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

A work-around for getting progress information in a timely manner from
live pipelines. We cannot rely on getting BUFFERING messages within
the stalled time window (3s), so we have to poll for progress
information somehow.

Makes the following pass reliably
 http/tests/media/hls/hls-audio-tracks-has-audio.html passed unexpectedly
 http/tests/media/hls/hls-audio-tracks.html passed unexpectedly
 http/tests/media/hls/hls-progress.html passed unexpectedly

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::findHLSQueue):
(WebCore::isHLSProgressing):
(WebCore::MediaPlayerPrivateGStreamer::fillTimerFired):

LayoutTests:

Fixes the removed tests.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/191497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219688 268f45cc-cd09-0410-ab3c-d52691b4dbfc